1.导航规则增加补充前缀、后缀支持。 2.增加MD5采集规则支持。

--- a/SmartSpiderCore/SmartSpiderCore.csproj
+++ b/SmartSpiderCore/SmartSpiderCore.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ExtractRule\FixedValueRule.cs" />
     <Compile Include="ExtractRule\GuidRule.cs" />
     <Compile Include="ExtractRule\InnerTextRule.cs" />
+	<Compile Include="ExtractRule\Md5Rule.cs" />
     <Compile Include="ExtractRule\RegexToList.cs" />
     <Compile Include="ExtractRule\SplitRule.cs" />
     <Compile Include="In\ActiveMQEnumerator.cs" />
